# YT2Key-BPM

./: .gitignore  README.md  README_playlist_tool.md  README_vst_companion.md  requirements.txt
plugin/: CMakeLists.txt
plugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: build_keyfinder_cli.sh  build_vst3.sh  downloader_core.py  playlist_key_bpm_downloader.py  run_companion.sh  setup_companion.sh  stop_companion.sh
service/: app.py
tools/keyfinder_cli/: CMakeLists.txt  main.cpp
